// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e-sequence should return correct PDF mapping for example 1 1`] = `
[
  {
    "action": "goToStep",
    "name": "druhPriznania",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_druh",
    "type": "radioGroup",
    "value": "priznanie",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_rok",
    "type": "input",
    "value": 2024,
  },
  {
    "action": "goToStep",
    "name": "udajeODanovnikovi",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_voSvojomMene",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priznanieAko",
    "type": "radioGroup",
    "value": "fyzickaOsoba",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_rodneCislo",
    "type": "input",
    "value": "920314/6326",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priezvisko",
    "type": "input",
    "value": "AAA Skúšobné s r .o",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_meno",
    "type": "input",
    "value": "Peter",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_titul",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_ulica",
    "type": "input",
    "value": "Robotnícka",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_cislo",
    "type": "input",
    "value": "6",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_obec",
    "type": "input",
    "value": "Bratislava",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_psc",
    "type": "input",
    "value": "83103",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_stat",
    "type": "select",
    "value": "703",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_korespondencnaAdresaRovnaka",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_email",
    "type": "input",
    "value": "meno@gmail.com",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_telefon",
    "type": "input",
    "value": "+421948111111",
  },
  {
    "action": "goToStep",
    "name": "danZPozemkov",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_kalkulackaWrapper_pouzitKalkulacku",
    "type": "checkbox",
    "value": true,
  },
  {
    "action": "array",
    "id": "root_danZPozemkov_priznania",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pravnyVztah",
    "type": "radioGroup",
    "value": "vlastnik",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_spoluvlastnictvo",
    "type": "radioGroup",
    "value": "somJedinyVlastnik",
  },
  {
    "action": "array",
    "id": "root_danZPozemkov_priznania_0_pozemky",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_cisloListuVlastnictva",
    "type": "input",
    "value": "0000",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_kataster",
    "type": "select",
    "value": "Nové Mesto",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_parcelneCisloSposobVyuzitiaPozemku_cisloParcely",
    "type": "input",
    "value": "2567/0",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_parcelneCisloSposobVyuzitiaPozemku_sposobVyuzitiaPozemku",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_druhPozemku",
    "type": "select",
    "value": "E",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_celkovaVymeraPozemku",
    "type": "input",
    "value": 215,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_podielPriestoruNaSpolocnychCastiachAZariadeniachDomu",
    "type": "input",
    "value": "2569/15897",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_spoluvlastnickyPodiel",
    "type": "input",
    "value": "1/1",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_datumy_datumVznikuDanovejPovinnosti",
    "type": "datePicker",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_datumy_datumZanikuDanovejPovinnosti",
    "type": "datePicker",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_poznamka",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebJedenUcel",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebViacereUcely",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZBytovANebytovychPriestorov",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "znizenieAleboOslobodenieOdDane",
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_pozemky",
    "type": "checkboxGroup",
    "value": [
      "option2",
      "option4",
    ],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_stavby",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_byty",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_poznamka",
    "type": "textArea",
    "value": undefined,
  },
]
`;

exports[`e2e-sequence should return correct PDF mapping for example 2 1`] = `
[
  {
    "action": "goToStep",
    "name": "druhPriznania",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_druh",
    "type": "radioGroup",
    "value": "ciastkovePriznanie",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_rok",
    "type": "input",
    "value": 2024,
  },
  {
    "action": "goToStep",
    "name": "udajeODanovnikovi",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_voSvojomMene",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priznanieAko",
    "type": "radioGroup",
    "value": "fyzickaOsoba",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_rodneCislo",
    "type": "input",
    "value": "1.1.1993",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priezvisko",
    "type": "input",
    "value": "Test",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_meno",
    "type": "input",
    "value": "Test",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_titul",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_ulica",
    "type": "input",
    "value": "Ulica ",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_cislo",
    "type": "input",
    "value": "15A",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_obec",
    "type": "input",
    "value": "Bratislava",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_psc",
    "type": "input",
    "value": "84106",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_stat",
    "type": "select",
    "value": "703",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_korespondencnaAdresaRovnaka",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_email",
    "type": "input",
    "value": "test@test.ts",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_telefon",
    "type": "input",
    "value": "+42191111111",
  },
  {
    "action": "goToStep",
    "name": "danZPozemkov",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_kalkulackaWrapper_pouzitKalkulacku",
    "type": "checkbox",
    "value": true,
  },
  {
    "action": "array",
    "id": "root_danZPozemkov_priznania",
    "length": 2,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pravnyVztah",
    "type": "radioGroup",
    "value": "vlastnik",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_spoluvlastnictvo",
    "type": "radioGroup",
    "value": "bezpodieloveSpoluvlastnictvoManzelov",
  },
  {
    "action": "array",
    "id": "root_danZPozemkov_priznania_0_pozemky",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_cisloListuVlastnictva",
    "type": "input",
    "value": "1111",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_kataster",
    "type": "select",
    "value": "Záhorská Bystrica",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_parcelneCisloSposobVyuzitiaPozemku_cisloParcely",
    "type": "input",
    "value": "730/2",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_parcelneCisloSposobVyuzitiaPozemku_sposobVyuzitiaPozemku",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_druhPozemku",
    "type": "select",
    "value": "F",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_celkovaVymeraPozemku",
    "type": "input",
    "value": 2,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_podielPriestoruNaSpolocnychCastiachAZariadeniachDomu",
    "type": "input",
    "value": "1/1",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_spoluvlastnickyPodiel",
    "type": "input",
    "value": "1/1",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_datumy_datumVznikuDanovejPovinnosti",
    "type": "datePicker",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_datumy_datumZanikuDanovejPovinnosti",
    "type": "datePicker",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_poznamka",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pravnyVztah",
    "type": "radioGroup",
    "value": "vlastnik",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_spoluvlastnictvo",
    "type": "radioGroup",
    "value": "bezpodieloveSpoluvlastnictvoManzelov",
  },
  {
    "action": "array",
    "id": "root_danZPozemkov_priznania_1_pozemky",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_cisloListuVlastnictva",
    "type": "input",
    "value": "1111",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_kataster",
    "type": "select",
    "value": "Záhorská Bystrica",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_parcelneCisloSposobVyuzitiaPozemku_cisloParcely",
    "type": "input",
    "value": "755/4",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_parcelneCisloSposobVyuzitiaPozemku_sposobVyuzitiaPozemku",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_druhPozemku",
    "type": "select",
    "value": "C",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_celkovaVymeraPozemku",
    "type": "input",
    "value": 24,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_podielPriestoruNaSpolocnychCastiachAZariadeniachDomu",
    "type": "input",
    "value": "1/1",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_spoluvlastnickyPodiel",
    "type": "input",
    "value": "1/1",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_datumy_datumVznikuDanovejPovinnosti",
    "type": "datePicker",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_pozemky_0_datumy_datumZanikuDanovejPovinnosti",
    "type": "datePicker",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_1_poznamka",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebJedenUcel",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebViacereUcely",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZBytovANebytovychPriestorov",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "bezpodieloveSpoluvlastnictvoManzelov",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_rodneCislo",
    "type": "input",
    "value": "123232/1234",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_priezvisko",
    "type": "input",
    "value": "Test",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_menoTitul_meno",
    "type": "input",
    "value": "Test",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_menoTitul_titul",
    "type": "input",
    "value": "Ing",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_rovnakaAdresa",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_email",
    "type": "input",
    "value": "test@test.ts",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_telefon",
    "type": "input",
    "value": "+42191111111",
  },
  {
    "action": "goToStep",
    "name": "znizenieAleboOslobodenieOdDane",
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_pozemky",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_stavby",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_byty",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_poznamka",
    "type": "textArea",
    "value": undefined,
  },
]
`;

exports[`e2e-sequence should return correct PDF mapping for example 3 1`] = `
[
  {
    "action": "goToStep",
    "name": "druhPriznania",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_druh",
    "type": "radioGroup",
    "value": "priznanie",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_rok",
    "type": "input",
    "value": 2024,
  },
  {
    "action": "goToStep",
    "name": "udajeODanovnikovi",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_voSvojomMene",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priznanieAko",
    "type": "radioGroup",
    "value": "fyzickaOsoba",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_rodneCislo",
    "type": "input",
    "value": "910101/1111",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priezvisko",
    "type": "input",
    "value": "Test",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_meno",
    "type": "input",
    "value": "Test",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_titul",
    "type": "input",
    "value": "Ing.",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_ulica",
    "type": "input",
    "value": "Test",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_cislo",
    "type": "input",
    "value": "1",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_obec",
    "type": "input",
    "value": "Bratislava",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_psc",
    "type": "input",
    "value": "85103",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_stat",
    "type": "select",
    "value": "703",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_korespondencnaAdresaRovnaka",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_email",
    "type": "input",
    "value": "test@mail.com",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_telefon",
    "type": "input",
    "value": "+421901111111",
  },
  {
    "action": "goToStep",
    "name": "danZPozemkov",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebJedenUcel",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebViacereUcely",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZBytovANebytovychPriestorov",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_kalkulackaWrapper_pouzitKalkulacku",
    "type": "checkbox",
    "value": true,
  },
  {
    "action": "array",
    "id": "root_danZBytovANebytovychPriestorov_priznania",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_cisloListuVlastnictva",
    "type": "input",
    "value": "3385",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_riadok1_ulicaACisloDomu",
    "type": "input",
    "value": "Jána Smreka 1",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_riadok1_supisneCislo",
    "type": "input",
    "value": 1,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_riadok2_kataster",
    "type": "select",
    "value": "Devínska Nová Ves",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_riadok2_cisloParcely",
    "type": "input",
    "value": "1234/10",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_pravnyVztah",
    "type": "radioGroup",
    "value": "vlastnik",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_spoluvlastnictvo",
    "type": "radioGroup",
    "value": "podieloveSpoluvlastnictvo",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_pocetSpoluvlastnikov",
    "type": "input",
    "value": 2,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_naZakladeDohody",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_splnomocnenie",
    "type": "fileUpload",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_priznanieZaByt",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_cisloBytu",
    "type": "input",
    "value": "23",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_popisBytu",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_podielPriestoruNaSpolocnychCastiachAZariadeniachDomu",
    "type": "input",
    "value": "3468/246230",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_spoluvlastnickyPodiel",
    "type": "input",
    "value": "1/2",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_vymeraPodlahovejPlochyNaIneUcely",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_datumy_datumVznikuDanovejPovinnosti",
    "type": "datePicker",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_datumy_datumZanikuDanovejPovinnosti",
    "type": "datePicker",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaNebytovyPriestor_priznanieZaNebytovyPriestor",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_poznamka",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "goToStep",
    "name": "znizenieAleboOslobodenieOdDane",
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_pozemky",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_stavby",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_byty",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_poznamka",
    "type": "textArea",
    "value": undefined,
  },
]
`;

exports[`e2e-sequence should return correct PDF mapping for example 4 1`] = `
[
  {
    "action": "goToStep",
    "name": "druhPriznania",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_druh",
    "type": "radioGroup",
    "value": "ciastkovePriznanieNaZanikDanovejPovinnosti",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_rok",
    "type": "input",
    "value": 2024,
  },
  {
    "action": "goToStep",
    "name": "udajeODanovnikovi",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_voSvojomMene",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priznanieAko",
    "type": "radioGroup",
    "value": "fyzickaOsoba",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_rodneCislo",
    "type": "input",
    "value": "93823741111",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priezvisko",
    "type": "input",
    "value": "Test ",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_meno",
    "type": "input",
    "value": "Test",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_titul",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_ulica",
    "type": "input",
    "value": "Test",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_cislo",
    "type": "input",
    "value": "1111/61",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_obec",
    "type": "input",
    "value": "Trnava",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_psc",
    "type": "input",
    "value": "91701",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_stat",
    "type": "select",
    "value": "703",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_korespondencnaAdresaRovnaka",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_email",
    "type": "input",
    "value": "test@test.sk",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_telefon",
    "type": "input",
    "value": "+421911111111",
  },
  {
    "action": "goToStep",
    "name": "danZPozemkov",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebJedenUcel",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebViacereUcely",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "danZBytovANebytovychPriestorov",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "goToStep",
    "name": "znizenieAleboOslobodenieOdDane",
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_pozemky",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_stavby",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_byty",
    "type": "checkboxGroup",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_poznamka",
    "type": "textArea",
    "value": undefined,
  },
]
`;

exports[`e2e-sequence should return correct PDF mapping for example 5 1`] = `
[
  {
    "action": "goToStep",
    "name": "druhPriznania",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_druh",
    "type": "radioGroup",
    "value": "opravnePriznanie",
  },
  {
    "action": "field",
    "id": "root_druhPriznania_rok",
    "type": "input",
    "value": 2024,
  },
  {
    "action": "goToStep",
    "name": "udajeODanovnikovi",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_voSvojomMene",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priznanieAko",
    "type": "radioGroup",
    "value": "fyzickaOsoba",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_rodneCislo",
    "type": "input",
    "value": "9203146326",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_priezvisko",
    "type": "input",
    "value": "Abraham",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_meno",
    "type": "input",
    "value": "Lincoln",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_menoTitul_titul",
    "type": "input",
    "value": "Mgr.",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_ulica",
    "type": "input",
    "value": "Robotnícka",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_ulicaCisloFyzickaOsoba_cislo",
    "type": "input",
    "value": "6",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_obec",
    "type": "input",
    "value": "Bratislava",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_obecPsc_psc",
    "type": "input",
    "value": "83103",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_stat",
    "type": "select",
    "value": "686",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_korespondencnaAdresaRovnaka",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_ulicaCisloKorespondencnaAdresa_ulica",
    "type": "input",
    "value": "Prašivá",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_ulicaCisloKorespondencnaAdresa_cislo",
    "type": "input",
    "value": "7",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_obecPsc_obec",
    "type": "input",
    "value": "Bratislava",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_obecPsc_psc",
    "type": "input",
    "value": "83106",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_korespondencnaAdresa_stat",
    "type": "select",
    "value": "703",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_email",
    "type": "input",
    "value": "test@test.com",
  },
  {
    "action": "field",
    "id": "root_udajeODanovnikovi_telefon",
    "type": "input",
    "value": "+421948417711",
  },
  {
    "action": "goToStep",
    "name": "danZPozemkov",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_kalkulackaWrapper_pouzitKalkulacku",
    "type": "checkbox",
    "value": true,
  },
  {
    "action": "array",
    "id": "root_danZPozemkov_priznania",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pravnyVztah",
    "type": "radioGroup",
    "value": "vlastnik",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_spoluvlastnictvo",
    "type": "radioGroup",
    "value": "somJedinyVlastnik",
  },
  {
    "action": "array",
    "id": "root_danZPozemkov_priznania_0_pozemky",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_cisloListuVlastnictva",
    "type": "input",
    "value": "4589",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_kataster",
    "type": "select",
    "value": "Devínska Nová Ves",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_parcelneCisloSposobVyuzitiaPozemku_cisloParcely",
    "type": "input",
    "value": "7986/1",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_parcelneCisloSposobVyuzitiaPozemku_sposobVyuzitiaPozemku",
    "type": "input",
    "value": "Ložisko",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_druhPozemku",
    "type": "select",
    "value": "B",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_celkovaVymeraPozemku",
    "type": "input",
    "value": 218,
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_podielPriestoruNaSpolocnychCastiachAZariadeniachDomu",
    "type": "input",
    "value": "4587/53994",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_spoluvlastnickyPodiel",
    "type": "input",
    "value": "1/1",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_datumy_datumVznikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-13",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_pozemky_0_datumy_datumZanikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-04",
  },
  {
    "action": "field",
    "id": "root_danZPozemkov_priznania_0_poznamka",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebJedenUcel",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_kalkulackaWrapper_pouzitKalkulacku",
    "type": "checkbox",
    "value": true,
  },
  {
    "action": "array",
    "id": "root_danZoStaviebJedenUcel_priznania",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_cisloListuVlastnictva",
    "type": "input",
    "value": "4597",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_riadok1_ulicaACisloDomu",
    "type": "input",
    "value": "Príkladná 35",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_riadok1_supisneCislo",
    "type": "input",
    "value": 2526,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_riadok2_kataster",
    "type": "select",
    "value": "Jarovce",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_riadok2_cisloParcely",
    "type": "input",
    "value": "7859/1",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_pravnyVztah",
    "type": "radioGroup",
    "value": "vlastnik",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_spoluvlastnictvo",
    "type": "radioGroup",
    "value": "podieloveSpoluvlastnictvo",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_pocetSpoluvlastnikov",
    "type": "input",
    "value": 2,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_naZakladeDohody",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_splnomocnenie",
    "type": "fileUpload",
    "value": [],
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_predmetDane",
    "type": "select",
    "value": "a",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_celkovaZastavanaPlocha",
    "type": "input",
    "value": 2659,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_spoluvlastnickyPodiel",
    "type": "input",
    "value": "1/2",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_pocetNadzemnychAPodzemnychPodlaziStavbyOkremPrvehoNadzemnehoPodlazia",
    "type": "input",
    "value": 5,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_castStavbyOslobodenaOdDane",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_castStavbyOslobodenaOdDaneDetaily_celkovaVymeraPodlahovychPlochVsetkychPodlaziStavby",
    "type": "input",
    "value": 26,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_castStavbyOslobodenaOdDaneDetaily_vymeraPodlahovychPlochCastiStavbyOslobodenejOdDaneZoStavieb",
    "type": "input",
    "value": 89,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_datumy_datumVznikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-04",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_datumy_datumZanikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-06",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebJedenUcel_priznania_0_poznamka",
    "type": "input",
    "value": undefined,
  },
  {
    "action": "goToStep",
    "name": "danZoStaviebViacereUcely",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_kalkulackaWrapper_pouzitKalkulacku",
    "type": "checkbox",
    "value": true,
  },
  {
    "action": "array",
    "id": "root_danZoStaviebViacereUcely_priznania",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_cisloListuVlastnictva",
    "type": "input",
    "value": "4597",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_riadok1_ulicaACisloDomu",
    "type": "input",
    "value": "Príkladná 35",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_riadok1_supisneCislo",
    "type": "input",
    "value": 35,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_riadok2_kataster",
    "type": "select",
    "value": "Devín",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_riadok2_cisloParcely",
    "type": "input",
    "value": "5697/1",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_pravnyVztah",
    "type": "radioGroup",
    "value": "najomca",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_spoluvlastnictvo",
    "type": "radioGroup",
    "value": "bezpodieloveSpoluvlastnictvoManzelov",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_popisStavby",
    "type": "input",
    "value": "Príkladná stavba",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_datumy_datumVznikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-05",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_datumy_datumZanikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-04",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_celkovaVymera",
    "type": "input",
    "value": 25648,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_pocetNadzemnychAPodzemnychPodlaziStavbyOkremPrvehoNadzemnehoPodlazia",
    "type": "input",
    "value": 4,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_castStavbyOslobodenaOdDane",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_vymeraPodlahovychPlochCastiStavbyOslobodenejOdDaneZoStavieb",
    "type": "input",
    "value": 26,
  },
  {
    "action": "array",
    "id": "root_danZoStaviebViacereUcely_priznania_0_nehnutelnosti_nehnutelnosti",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_nehnutelnosti_nehnutelnosti_0_ucelVyuzitiaStavby",
    "type": "select",
    "value": "b",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_nehnutelnosti_nehnutelnosti_0_podielPriestoruNaSpolocnychCastiachAZariadeniachDomu",
    "type": "input",
    "value": "4598/26594",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_nehnutelnosti_nehnutelnosti_0_spoluvlastnickyPodiel",
    "type": "input",
    "value": "1/1",
  },
  {
    "action": "field",
    "id": "root_danZoStaviebViacereUcely_priznania_0_poznamka",
    "type": "input",
    "value": "Príkladná 35",
  },
  {
    "action": "goToStep",
    "name": "danZBytovANebytovychPriestorov",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_vyplnitObject_vyplnit",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_kalkulackaWrapper_pouzitKalkulacku",
    "type": "checkbox",
    "value": true,
  },
  {
    "action": "array",
    "id": "root_danZBytovANebytovychPriestorov_priznania",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_cisloListuVlastnictva",
    "type": "input",
    "value": "2648",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_riadok1_ulicaACisloDomu",
    "type": "input",
    "value": "Príkladná 35",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_riadok1_supisneCislo",
    "type": "input",
    "value": 3694,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_riadok2_kataster",
    "type": "select",
    "value": "Karlova Ves",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_riadok2_cisloParcely",
    "type": "input",
    "value": "6975/2",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_pravnyVztah",
    "type": "radioGroup",
    "value": "spravca",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_spoluvlastnictvo",
    "type": "radioGroup",
    "value": "podieloveSpoluvlastnictvo",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_pocetSpoluvlastnikov",
    "type": "input",
    "value": 3,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_naZakladeDohody",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_priznanieZaByt",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_cisloBytu",
    "type": "input",
    "value": "3",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_popisBytu",
    "type": "input",
    "value": "Dvojizbak",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_podielPriestoruNaSpolocnychCastiachAZariadeniachDomu",
    "type": "input",
    "value": "2654/36594",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_spoluvlastnickyPodiel",
    "type": "input",
    "value": "1/1",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_vymeraPodlahovejPlochyNaIneUcely",
    "type": "input",
    "value": 18,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_datumy_datumVznikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-16",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaByt_datumy_datumZanikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-07",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaNebytovyPriestor_priznanieZaNebytovyPriestor",
    "type": "radioGroup",
    "value": true,
  },
  {
    "action": "array",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaNebytovyPriestor_nebytovePriestory",
    "length": 1,
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaNebytovyPriestor_nebytovePriestory_0_riadok_ucelVyuzitiaNebytovehoPriestoruVBytovomDome",
    "type": "input",
    "value": "Garáž",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaNebytovyPriestor_nebytovePriestory_0_riadok_cisloNebytovehoPriestoruVBytovomDome",
    "type": "input",
    "value": "G05",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaNebytovyPriestor_nebytovePriestory_0_podielPriestoruNaSpolocnychCastiachAZariadeniachDomu",
    "type": "input",
    "value": "2659/86569",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaNebytovyPriestor_nebytovePriestory_0_spoluvlastnickyPodiel",
    "type": "input",
    "value": "1/5",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaNebytovyPriestor_nebytovePriestory_0_datumy_datumVznikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-05",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_priznanieZaNebytovyPriestor_nebytovePriestory_0_datumy_datumZanikuDanovejPovinnosti",
    "type": "datePicker",
    "value": "2024-01-12",
  },
  {
    "action": "field",
    "id": "root_danZBytovANebytovychPriestorov_priznania_0_poznamka",
    "type": "input",
    "value": "Príkladná 35",
  },
  {
    "action": "goToStep",
    "name": "bezpodieloveSpoluvlastnictvoManzelov",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_rodneCislo",
    "type": "input",
    "value": "920314/2634",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_priezvisko",
    "type": "input",
    "value": "Príkladná",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_menoTitul_meno",
    "type": "input",
    "value": "Petra",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_menoTitul_titul",
    "type": "input",
    "value": "Bsc",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_rovnakaAdresa",
    "type": "radioGroup",
    "value": false,
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_ulicaCisloBezpodieloveSpoluvlastnictvoManzelov_ulica",
    "type": "input",
    "value": "Príkladná 35",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_ulicaCisloBezpodieloveSpoluvlastnictvoManzelov_cislo",
    "type": "input",
    "value": "25",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_obecPsc_obec",
    "type": "input",
    "value": "Abelova",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_obecPsc_psc",
    "type": "input",
    "value": "83106",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_stat",
    "type": "select",
    "value": "703",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_email",
    "type": "input",
    "value": "test@test.com",
  },
  {
    "action": "field",
    "id": "root_bezpodieloveSpoluvlastnictvoManzelov_telefon",
    "type": "input",
    "value": "+421948417711",
  },
  {
    "action": "goToStep",
    "name": "znizenieAleboOslobodenieOdDane",
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_pozemky",
    "type": "checkboxGroup",
    "value": [
      "option1",
      "option2",
      "option3",
      "option4",
    ],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_stavby",
    "type": "checkboxGroup",
    "value": [
      "option1",
      "option2",
      "option3",
    ],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_byty",
    "type": "checkboxGroup",
    "value": [
      "option1",
      "option2",
    ],
  },
  {
    "action": "field",
    "id": "root_znizenieAleboOslobodenieOdDane_poznamka",
    "type": "textArea",
    "value": "Príkladná 35",
  },
]
`;
